--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,7 +18,10 @@ jobs:
         run: python factorial.py
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v1
-      - name: Terraform Apply
+
+      - name: Terraform Init
+        run: terraform init
+       - name: Terraform Apply
         run: terraform apply -auto-approve
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
